--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using react
-@namespace react.Pages
+﻿@using TrivyDash
+@namespace TrivyDash.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
